add grafana and prometheus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,24 @@
+spring.application.name=access-time-estimate
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.hikari.maximum-pool-size=1000
+spring.jpa.database=postgresql
+
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.mvc.static-path-pattern=/**
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.metrics.export.prometheus.enabled=true
+management.metrics.export.datadog.enabled=false
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.tags.application=access-time-estimate
+#management.metrics.tags.instance=access-time-estimate
+#management.metrics.distribution.sla.http.server.requests=50ms, 100ms, 200ms, 400ms
+#management.metrics.distribution.percentiles.http.server.requests=0.5, 0.75, 0.9, 0.95
